k8s-apps/infra/argocd/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-route
  namespace: argocd
spec:
  parentRefs:
    - name: public-gateway-ipv4
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: default
  hostnames:
    - "argocd.aesthar.com.br"
  rules:
    - backendRefs:
      - name: argocd-server
        group: ''
        kind: Service
        port: 80
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
